# lohan-hooks

./: .gitignore  README.md  mypy.ini  pyproject.toml  run_hf.py
lohan_hooks/: __init__.py  common.py  compute_manager.py  cpu_manager.py  logger.py  model_info.py  ray_plugins.py
lohan_hooks/model_loader/: weight_utils.py
lohan_hooks/parameter/: __init__.py  cpu_param.py  param.py  param_group.py
lohan_hooks/patches/: patch_llama.py
